@@ -43,6 +43,7 @@ gtksourceview/language-specs/msil.lang
 gtksourceview/language-specs/nemerle.lang
 gtksourceview/language-specs/objc.lang
 gtksourceview/language-specs/ocaml.lang
+gtksourceview/language-specs/ocl.lang
 gtksourceview/language-specs/octave.lang
 gtksourceview/language-specs/pascal.lang
 gtksourceview/language-specs/perl.lang
@@ -57,7 +58,6 @@ gtksourceview/language-specs/sh.lang
 gtksourceview/language-specs/spec.lang
 gtksourceview/language-specs/sql.lang
 gtksourceview/language-specs/tcl.lang
-gtksourceview/language-specs/testdark.xml
 gtksourceview/language-specs/texinfo.lang
 gtksourceview/language-specs/vbnet.lang
 gtksourceview/language-specs/verilog.lang
@@ -66,4 +66,4 @@ gtksourceview/language-specs/xml.lang
 gtksourceview/language-specs/yacc.lang
 gtksourceview/language-specs/gvim.xml
 gtksourceview/language-specs/kate.xml
-gtksourceview/regex/glib/gregex.c
+gtksourceview/language-specs/tango.xml
