@@ -1,0 +1,2 @@
+gtksourceview/language-specs/testdark.xml
+gtksourceview/regex/glib/gregex.c
